Added the exit point to a randomly selected border tile.

--- a/src/components/styles/room.css
+++ b/src/components/styles/room.css
@@ -15,4 +15,8 @@
   display: grid;
   grid-template-columns: repeat(10, 4vw);
   grid-template-rows: repeat(10, 4vw);
+  border: solid black 0.3em;
+  border-radius: 1.5em;
+  overflow: hidden;
+
 }
