--- a/src/components/styles/room.css
+++ b/src/components/styles/room.css
@@ -9,7 +9,7 @@
   justify-content: center;
   height: 96vh;
   align-items: center;
-  background-color: #eaeaea;
+  /* background-color: #eaeaea; */
 }
 
 .grid-container {
