--- a/src/components/styles/direction-card.css
+++ b/src/components/styles/direction-card.css
@@ -12,5 +12,5 @@
   border: solid black 0.05em;
   border-radius: 0.1em;
   font-size: 5em;
-  background-color: #fff;
+  background-color: #76ebff;
 }
