--- a/src/components/styles/direction-card.css
+++ b/src/components/styles/direction-card.css
@@ -14,3 +14,13 @@
   font-size: 5em;
   background-color: #76ebff;
 }
+
+.currentDirection {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome and Opera */
+}
