--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -14,7 +14,7 @@
   background-color: #676767;
   border: none;
   outline: none;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Nunito', sans-serif;
 }
 
 .game-button:hover {
