--- a/src/components/styles/timer.css
+++ b/src/components/styles/timer.css
@@ -1,6 +1,7 @@
 .timer-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   position: fixed;
   top: 23%;
@@ -10,6 +11,16 @@
   border: solid black 0.2em;
   border-radius: 0.3em;
   background-color: #313030;
+}
+
+.clock-words {
+  font-size: 1em;
+  color: #ffffff;
+  margin: 0;
+}
+
+.time {
   font-size: 3em;
   color: red;
+  margin: 0;
 }
