Made minor changes to styling by removing some unused classNames

--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -21,11 +21,11 @@
   color: #ffffff30;
 }
 
-.app {
+/* .app {
   display: flex;
   justify-content: space-around;
   align-items: space-around;
-}
+} */
 
 .game-room-and-controls {
   display: flex;
