Adjusted some basic styling on the game screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: #00000098;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'VT323', monospace;
+  /* font-family: 'Amatic SC', cursive; */
   /* font-family: 'Comfortaa', cursive; */
 }
