--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -14,7 +14,8 @@
   background-color: #676767;
   border: none;
   outline: none;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'VT323', monospace;
+  /* font-family: 'Amatic SC', cursive; */
 }
 
 .game-button:hover {
@@ -30,5 +31,12 @@
 .game-room-and-controls {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#game-info-section {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
